--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -51,32 +51,11 @@
                 android:layout_marginBottom="8dp">
 
                 <AutoCompleteTextView
-                    android:id="@+id/firstname"
+                    android:id="@+id/fullname"
                     android:textColor="@color/icons"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="First Name"
-                    android:textColorHint="@color/colorAccent"
-                    android:typeface="sans"
-                    android:inputType="textPersonName"
-                    android:imeOptions="actionNext"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp">
-
-                <AutoCompleteTextView
-                    android:id="@+id/lastname"
-                    android:textColor="@color/icons"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Last Name"
+                    android:hint="Full Name (41 chars)"
                     android:textColorHint="@color/colorAccent"
                     android:typeface="sans"
                     android:inputType="textPersonName"
