--- a/app/src/main/res/layout/request.xml
+++ b/app/src/main/res/layout/request.xml
@@ -49,7 +49,7 @@
             android:src="@drawable/ic_account_circle"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="2dp"
             android:paddingTop="4dp"
@@ -58,7 +58,7 @@
             android:layout_toRightOf="@+id/nameicon"
             android:textColor="@color/primary_text"/>
 
-        <ImageView
+        <!--<ImageView
             android:layout_width="35dp"
             android:layout_height="20dp"
             android:paddingLeft="10dp"
@@ -66,9 +66,9 @@
             android:id="@+id/eventicon"
             android:tint="@color/colorPrimary"
             android:layout_below="@+id/nameicon"
-            android:src="@drawable/ic_event"/>
+            android:src="@drawable/ic_event"/>-->
 
-        <TextView
+        <!--<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
@@ -77,7 +77,7 @@
             android:textSize="12sp"
             android:layout_toRightOf="@+id/eventicon"
             android:textColor="@color/primary_text"
-            android:id="@+id/requestevent"/>
+            android:id="@+id/requestevent"/>-->
 
         <ImageView
             android:layout_width="35dp"
@@ -86,13 +86,13 @@
             android:paddingTop="4dp"
             android:id="@+id/emailicon"
             android:tint="@color/colorPrimary"
-            android:layout_below="@+id/eventicon"
+            android:layout_below="@+id/nameicon"
             android:src="@drawable/ic_email_black_24dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/requestevent"
+            android:layout_below="@+id/name"
             android:paddingLeft="2dp"
             android:paddingTop="3dp"
             android:textColor="@color/primary_text"
@@ -111,7 +111,7 @@
             android:src="@drawable/ic_ticket"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/email"
             android:paddingLeft="2dp"
@@ -121,9 +121,7 @@
             android:textColor="@color/primary_text"
             android:id="@+id/numtickets"/>
 
-
-
-        <ImageButton
+        <!--<ImageButton
             android:layout_width="100px"
             android:layout_height="80px"
             android:src="@drawable/ic_action_name"
@@ -144,7 +142,35 @@
             android:paddingLeft= "12dp"
             android:paddingTop= "12dp"
             android:paddingBottom= "12dp"
-            android:backgroundTint="#b71c1c"/>
+            android:backgroundTint="#b71c1c"/>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/numticketsicon"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/reject"
+                android:text="Reject"
+                style="?android:attr/borderlessButtonStyle"
+                android:textColor="@color/red"
+                android:layout_weight="1"
+                />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/accept"
+                android:layout_toRightOf="@id/reject"
+                style="?android:attr/borderlessButtonStyle"
+                android:text="Accept"
+                android:textColor="@color/colorPrimary"
+                android:layout_weight="1"
+                />
+        </LinearLayout>
 
 
     </RelativeLayout>
