--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -18,8 +18,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        card_view:cardElevation="5dp"
-        android:padding ="15dp">
+        card_view:cardElevation="5dp">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:id="@+id/status_v2"
+            />
 
     <dev.dworks.libs.astickyheader.ui.SquareImageView
         android:layout_width="65dp"
@@ -29,87 +36,85 @@
         android:layout_margin="10dp"
         android:src="@drawable/ticketsbg"/>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:id="@+id/textcontainer"
-        android:layout_marginLeft="75dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="4dp"
-            android:id="@+id/eventicon"
-            android:tint="@color/colorPrimary"
-            android:src="@drawable/ic_event"/>
-
-        <TextView
+        <RelativeLayout
+            android:orientation="vertical"
+            android:id="@+id/textcontainer"
+            android:layout_marginLeft="75dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="2dp"
-            android:paddingTop="4dp"
-            android:textSize="12sp"
-            android:id="@+id/event"
-            android:layout_toRightOf="@+id/eventicon"
-            android:textColor="@color/primary_text"/>
+            android:layout_gravity="center_vertical">
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="4dp"
-            android:id="@+id/placeicon"
-            android:layout_below="@+id/eventicon"
-            android:tint="@color/colorPrimary"
-            android:src="@drawable/ic_place_black_24dp"/>
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="20dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="4dp"
+                android:id="@+id/eventicon"
+                android:tint="@color/colorPrimary"
+                android:src="@drawable/ic_event"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/event"
-            android:paddingLeft="2dp"
-            android:paddingTop="4dp"
-            android:textSize="12sp"
-            android:layout_toRightOf="@+id/placeicon"
-            android:textColor="@color/primary_text"
-            android:id="@+id/place"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="2dp"
+                android:paddingTop="4dp"
+                android:textSize="12sp"
+                android:id="@+id/event"
+                android:layout_toRightOf="@+id/eventicon"
+                android:textColor="@color/primary_text"/>
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="4dp"
-            android:id="@+id/datetimeicon"
-            android:tint="@color/colorPrimary"
-            android:layout_below="@+id/placeicon"
-            android:src="@drawable/overtime"/>
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="20dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="4dp"
+                android:id="@+id/placeicon"
+                android:layout_below="@+id/eventicon"
+                android:tint="@color/colorPrimary"
+                android:src="@drawable/ic_place_black_24dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/place"
-            android:paddingLeft="2dp"
-            android:paddingTop="3dp"
-            android:textSize="12sp"
-            android:textColor="@color/primary_text"
-            android:layout_toRightOf="@+id/placeicon"
-            android:id="@+id/datetime"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/event"
+                android:paddingLeft="2dp"
+                android:paddingTop="4dp"
+                android:textSize="12sp"
+                android:layout_toRightOf="@+id/placeicon"
+                android:textColor="@color/primary_text"
+                android:id="@+id/place"/>
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="20dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="4dp"
+                android:id="@+id/datetimeicon"
+                android:tint="@color/colorPrimary"
+                android:layout_below="@+id/placeicon"
+                android:src="@drawable/overtime"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/place"
+                android:paddingLeft="2dp"
+                android:paddingTop="3dp"
+                android:textSize="12sp"
+                android:textColor="@color/primary_text"
+                android:layout_toRightOf="@+id/placeicon"
+                android:id="@+id/datetime"/>
 
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="4dp"
-            android:id="@+id/numticketsicon"
-            android:tint="@color/colorPrimary"
-            android:layout_below="@+id/datetimeicon"
-            android:src="@drawable/ic_ticket"/>
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="20dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="4dp"
+                android:id="@+id/numticketsicon"
+                android:tint="@color/colorPrimary"
+                android:layout_below="@+id/datetimeicon"
+                android:src="@drawable/ic_ticket"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -122,7 +127,7 @@
                 android:textSize="12sp"
                 android:id="@+id/numtickets"/>
 
-            <TextView
+            <!--<TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignRight="@+id/numtickets"
@@ -131,10 +136,15 @@
                 android:padding="3dp"
                 android:textColor="@color/primary_text"
                 android:textSize="12sp"
+                android:id="@+id/status"/>-->
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
                 android:id="@+id/status"/>
-
-
-    </RelativeLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
