--- a/app/src/main/res/layout/request.xml
+++ b/app/src/main/res/layout/request.xml
@@ -21,13 +21,14 @@
         card_view:cardElevation="5dp"
         android:padding ="15dp">
 
-    <dev.dworks.libs.astickyheader.ui.SquareImageView
-        android:layout_width="65dp"
-        android:layout_height="6dp"
-        android:id="@+id/requestimage"
-        android:scaleType="centerCrop"
-        android:layout_margin="10dp"
-        android:src="@drawable/ticketsbg"/>
+        <dev.dworks.libs.astickyheader.ui.SquareImageView
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:id="@+id/requestimage"
+            android:scaleType="centerCrop"
+            android:layout_margin="10dp"
+            android:src="@drawable/ticketsbg"
+            android:layout_centerVertical="true" />
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/textcontainer"
