--- a/app/src/main/res/layout/activity_view_ticket_details.xml
+++ b/app/src/main/res/layout/activity_view_ticket_details.xml
@@ -52,7 +52,7 @@
         fab:menu_animationDelayPerItem="55"
         fab:menu_backgroundColor="@android:color/transparent"
         fab:menu_buttonSpacing="0dp"
-        fab:menu_colorNormal="@color/colorPrimaryDark"
+        fab:menu_colorNormal="@color/colorPrimary"
         fab:menu_colorPressed="@color/colorAccent"
         fab:menu_colorRipple="#99d4d4d4"
         fab:menu_fab_size="normal"
