--- a/app/src/main/res/layout/attendees.xml
+++ b/app/src/main/res/layout/attendees.xml
@@ -26,10 +26,8 @@
         android:layout_height="6dp"
         android:id="@+id/attendeesimage"
         android:scaleType="centerCrop"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp"
+        android:layout_margin = "10dp"
+        android:layout_gravity="center_vertical"
         android:src="@drawable/ticketsbg"/>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -41,6 +39,11 @@
         android:paddingBottom="5dp"
         android:layout_gravity="center_vertical"
         >
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/namelay"
+            android:gravity="center_horizontal">
 
         <ImageView
             android:layout_width="40dp"
@@ -58,8 +61,16 @@
             android:textSize="20sp"
             android:id="@+id/attendeesname"
             android:layout_toRightOf="@+id/nameicon"
+            android:layout_alignBottom="@+id/nameicon"
             android:textColor="@color/primary_text"/>
+            </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/emaillay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/namelay">
 
         <ImageView
             android:layout_width="37dp"
@@ -67,19 +78,27 @@
             android:paddingLeft="5dp"
             android:paddingTop="4dp"
             android:id="@+id/emailicon"
-            android:layout_below="@+id/nameicon"
             android:src="@drawable/ic_email_black_24dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/attendeesname"
             android:paddingLeft="2dp"
             android:paddingTop="2dp"
             android:textColor="@color/primary_text"
             android:layout_toRightOf="@+id/emailicon"
             android:textSize="15sp"
-            android:id="@+id/attendeesemail"/>
+            android:id="@+id/attendeesemail"
+            android:layout_alignBottom="@+id/emailicon"
+            />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/numlay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/emaillay">
 
         <ImageView
             android:layout_width="37dp"
@@ -87,19 +106,20 @@
             android:paddingLeft="5dp"
             android:paddingTop="4dp"
             android:id="@+id/numticketsicon"
-            android:layout_below="@+id/emailicon"
             android:src="@drawable/ic_ticket"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/attendeesemail"
             android:paddingLeft="2dp"
             android:paddingTop="2dp"
             android:textColor="@color/primary_text"
             android:layout_toRightOf="@+id/numticketsicon"
             android:textSize="15sp"
+            android:layout_alignBottom="@+id/numticketsicon"
             android:id="@+id/attnumtickets"/>
+
+            </RelativeLayout>
 
     </RelativeLayout>
     </android.support.v7.widget.CardView>
