--- a/app/src/main/res/layout/content_view_ticket_details.xml
+++ b/app/src/main/res/layout/content_view_ticket_details.xml
@@ -37,7 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:text="" />
+            android:text=""
+            android:textColor="@color/primary_text"/>
 
     </LinearLayout>
 
@@ -64,7 +65,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:text="" />
+            android:text=""
+            android:textColor="@color/primary_text"/>
 
     </LinearLayout>
 
@@ -90,7 +92,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:text="" />
+            android:text=""
+            android:textColor="@color/primary_text"/>
 
     </LinearLayout>
 
@@ -116,7 +119,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:text="" />
+            android:text=""
+            android:textColor="@color/primary_text"/>
 
     </LinearLayout>
 
