--- a/app/src/main/res/layout/event.xml
+++ b/app/src/main/res/layout/event.xml
@@ -26,6 +26,7 @@
         android:layout_height="6dp"
         android:id="@+id/eventimage"
         android:scaleType="centerCrop"
+        android:layout_gravity="center_vertical"
         android:layout_margin="10dp"
         android:src="@drawable/ticketsbg"/>
 
@@ -36,8 +37,13 @@
         android:layout_marginLeft="75dp"
         android:paddingRight="20dp"
         android:paddingBottom="5dp"
-
         android:layout_gravity="center_vertical">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/eventlay"
+            android:gravity="center_horizontal">
 
         <ImageView
             android:layout_width="35dp"
@@ -56,7 +62,18 @@
             android:textSize="12sp"
             android:id="@+id/eventname"
             android:layout_toRightOf="@+id/eventicon"
+            android:layout_alignBottom="@+id/eventicon"
+
             android:textColor="@color/primary_text"/>
+
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/placelay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/eventlay">
 
         <ImageView
             android:layout_width="35dp"
@@ -64,20 +81,28 @@
             android:paddingLeft="10dp"
             android:paddingTop="4dp"
             android:id="@+id/placeicon"
-            android:layout_below="@+id/eventicon"
             android:tint="@color/colorPrimary"
             android:src="@drawable/ic_place_black_24dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/eventname"
             android:paddingLeft="2dp"
             android:paddingTop="4dp"
             android:textSize="12sp"
             android:layout_toRightOf="@+id/placeicon"
             android:textColor="@color/primary_text"
+            android:layout_alignBottom="@+id/placeicon"
             android:id="@+id/eventplace"/>
+
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/datetimelay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/placelay">
 
         <ImageView
             android:layout_width="35dp"
@@ -85,20 +110,27 @@
             android:paddingLeft="10dp"
             android:paddingTop="4dp"
             android:id="@+id/datetimeicon"
-            android:layout_below="@+id/placeicon"
             android:tint="@color/colorPrimary"
             android:src="@drawable/overtime"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/eventplace"
             android:paddingLeft="2dp"
             android:paddingTop="3dp"
             android:textSize="12sp"
             android:layout_toRightOf="@+id/datetimeicon"
             android:textColor="@color/primary_text"
+            android:layout_alignBottom="@+id/datetimeicon"
             android:id="@+id/eventdatetime"/>
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/attendeeslay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/datetimelay">
 
         <ImageView
             android:layout_width="35dp"
@@ -106,20 +138,20 @@
             android:paddingLeft="10dp"
             android:paddingTop="4dp"
             android:id="@+id/attendeesicon"
-            android:layout_below="@+id/datetimeicon"
             android:tint="@color/colorPrimary"
             android:src="@drawable/ic_group_black_24dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/eventdatetime"
             android:paddingLeft="2dp"
             android:paddingTop="3dp"
             android:textColor="@color/primary_text"
             android:layout_toRightOf="@+id/attendeesicon"
+            android:layout_alignBottom="@+id/attendeesicon"
             android:textSize="12sp"
             android:id="@+id/attendees"/>
+            </RelativeLayout>
 
     </RelativeLayout>
 
