--- a/app/src/main/res/layout/profile_event.xml
+++ b/app/src/main/res/layout/profile_event.xml
@@ -27,6 +27,7 @@
             android:id="@+id/eventimage"
             android:scaleType="centerCrop"
             android:layout_margin="10dp"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/ticketsbg"/>
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -36,6 +37,12 @@
             android:layout_marginLeft="75dp"
             android:paddingRight="10dp"
             android:layout_gravity="center_vertical">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/eventlay"
+            android:gravity="center_horizontal">
 
             <ImageView
                 android:layout_width="35dp"
@@ -54,7 +61,17 @@
                 android:textSize="12sp"
                 android:id="@+id/eventname"
                 android:layout_toRightOf="@+id/eventicon"
+                android:layout_alignBottom="@+id/eventicon"
+
                 android:textColor="@color/primary_text"/>
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/placelay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/eventlay">
 
             <ImageView
                 android:layout_width="35dp"
@@ -62,20 +79,31 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:id="@+id/placeicon"
-                android:layout_below="@+id/eventicon"
                 android:tint="@color/colorPrimary"
                 android:src="@drawable/ic_place_black_24dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/eventname"
                 android:paddingLeft="2dp"
                 android:paddingTop="4dp"
                 android:textSize="12sp"
                 android:layout_toRightOf="@+id/placeicon"
                 android:textColor="@color/primary_text"
+                android:layout_alignBottom="@+id/placeicon"
+
                 android:id="@+id/eventplace"/>
+
+        </RelativeLayout>
+
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/datetimelay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/placelay">
 
             <ImageView
                 android:layout_width="35dp"
@@ -83,22 +111,21 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:id="@+id/datetimeicon"
-                android:layout_below="@+id/placeicon"
                 android:tint="@color/colorPrimary"
                 android:src="@drawable/overtime"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/eventplace"
                 android:paddingLeft="2dp"
                 android:paddingTop="3dp"
                 android:textSize="12sp"
                 android:layout_toRightOf="@+id/datetimeicon"
                 android:textColor="@color/primary_text"
+                android:layout_alignBottom="@+id/datetimeicon"
                 android:id="@+id/eventdatetime"/>
 
-
+            </RelativeLayout>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
