--- a/app/src/main/res/layout/request.xml
+++ b/app/src/main/res/layout/request.xml
@@ -28,57 +28,56 @@
             android:scaleType="centerCrop"
             android:layout_margin="10dp"
             android:src="@drawable/ticketsbg"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"/>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/textcontainer"
         android:layout_width="wrap_content"
-        android:layout_marginLeft="75dp"
+        android:layout_marginStart="75dp"
         android:paddingRight="10dp"
         android:paddingBottom="5dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical">
 
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="4dp"
-            android:id="@+id/nameicon"
-            android:tint="@color/colorPrimary"
-            android:src="@drawable/ic_account_circle"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="2dp"
-            android:paddingTop="4dp"
-            android:textSize="12sp"
-            android:id="@+id/name"
-            android:layout_toRightOf="@+id/nameicon"
-            android:textColor="@color/primary_text"/>
-
-        <!--<ImageView
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="4dp"
-            android:id="@+id/eventicon"
-            android:tint="@color/colorPrimary"
-            android:layout_below="@+id/nameicon"
-            android:src="@drawable/ic_event"/>-->
-
-        <!--<TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
-            android:paddingLeft="2dp"
-            android:paddingTop="4dp"
-            android:textSize="12sp"
-            android:layout_toRightOf="@+id/eventicon"
-            android:textColor="@color/primary_text"
-            android:id="@+id/requestevent"/>-->
+            android:id="@+id/namelay"
+            android:gravity="center_horizontal">
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="20dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="4dp"
+                android:id="@+id/nameicon"
+                android:tint="@color/colorPrimary"
+                android:src="@drawable/ic_account_circle"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="2dp"
+                android:paddingTop="4dp"
+                android:textSize="12sp"
+                android:id="@+id/name"
+                android:layout_toRightOf="@+id/nameicon"
+                android:layout_alignBottom="@+id/nameicon"
+
+                android:textColor="@color/primary_text"/>
+
+        </RelativeLayout>
+
+
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/emaillay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/namelay">
 
         <ImageView
             android:layout_width="35dp"
@@ -87,19 +86,28 @@
             android:paddingTop="4dp"
             android:id="@+id/emailicon"
             android:tint="@color/colorPrimary"
-            android:layout_below="@+id/nameicon"
             android:src="@drawable/ic_email_black_24dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
             android:paddingLeft="2dp"
             android:paddingTop="3dp"
             android:textColor="@color/primary_text"
             android:layout_toRightOf="@+id/emailicon"
+            android:layout_alignBottom="@+id/emailicon"
+
             android:textSize="12sp"
             android:id="@+id/email"/>
+
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/numlay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/emaillay">
 
         <ImageView
             android:layout_width="35dp"
@@ -108,47 +116,27 @@
             android:paddingTop="4dp"
             android:id="@+id/numticketsicon"
             android:tint="@color/colorPrimary"
-            android:layout_below="@+id/emailicon"
             android:src="@drawable/ic_ticket"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/email"
             android:paddingLeft="2dp"
             android:paddingTop="3dp"
             android:textSize="12sp"
             android:layout_toRightOf="@+id/numticketsicon"
             android:textColor="@color/primary_text"
+            android:layout_alignBottom="@+id/numticketsicon"
+
             android:id="@+id/numtickets"/>
 
-        <!--<ImageButton
-            android:layout_width="100px"
-            android:layout_height="80px"
-            android:src="@drawable/ic_action_name"
-            android:id="@+id/accept"
-            android:layout_toLeftOf="@+id/reject"
-            android:layout_alignParentBottom="true"
-            android:padding="12dp"
-            android:backgroundTint="@color/colorPrimary"/>
+            </RelativeLayout>
 
-        <ImageButton
-            android:layout_width="100px"
-            android:layout_height="80px"
-            android:src="@drawable/ic_reject"
-            android:id="@+id/reject"
-            android:layout_alignRight="@+id/numtickets"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:paddingLeft= "12dp"
-            android:paddingTop= "12dp"
-            android:paddingBottom= "12dp"
-            android:backgroundTint="#b71c1c"/>-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/numticketsicon"
+            android:layout_below="@id/numlay"
             android:orientation="horizontal">
 
             <Button
