--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -26,7 +26,8 @@
             android:id="@+id/ticketimage"
             android:scaleType="centerCrop"
             android:layout_margin="10dp"
-            android:src="@drawable/ticketsbg"/>
+            android:src="@drawable/ticketsbg"
+            android:layout_gravity="center_vertical"/>
 
         <RelativeLayout
             android:orientation="vertical"
@@ -35,6 +36,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/eventlay"
+            android:gravity="center_horizontal">
 
             <ImageView
                 android:layout_width="35dp"
@@ -53,7 +60,18 @@
                 android:textSize="12sp"
                 android:id="@+id/event"
                 android:layout_toRightOf="@+id/eventicon"
+                android:layout_alignBottom="@+id/eventicon"
+
                 android:textColor="@color/primary_text"/>
+
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/placelay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/eventlay">
 
             <ImageView
                 android:layout_width="35dp"
@@ -61,20 +79,28 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:id="@+id/placeicon"
-                android:layout_below="@+id/eventicon"
                 android:tint="@color/colorPrimary"
                 android:src="@drawable/ic_place_black_24dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/event"
                 android:paddingLeft="2dp"
                 android:paddingTop="4dp"
                 android:textSize="12sp"
                 android:layout_toRightOf="@+id/placeicon"
                 android:textColor="@color/primary_text"
+                android:layout_alignBottom="@+id/placeicon"
+
                 android:id="@+id/place"/>
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/datetimelay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/placelay">
 
             <ImageView
                 android:layout_width="35dp"
@@ -83,20 +109,27 @@
                 android:paddingTop="4dp"
                 android:id="@+id/datetimeicon"
                 android:tint="@color/colorPrimary"
-                android:layout_below="@+id/placeicon"
                 android:src="@drawable/overtime"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/place"
                 android:paddingLeft="2dp"
                 android:paddingTop="3dp"
                 android:textSize="12sp"
                 android:textColor="@color/primary_text"
-                android:layout_toRightOf="@+id/placeicon"
-                android:id="@+id/datetime"/>
+                android:layout_toRightOf="@+id/datetimeicon"
+                android:layout_alignBottom="@+id/datetimeicon"
 
+                android:id="@+id/datetime"/>
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/numlay"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/datetimelay">
 
             <ImageView
                 android:layout_width="35dp"
@@ -105,19 +138,19 @@
                 android:paddingTop="4dp"
                 android:id="@+id/numticketsicon"
                 android:tint="@color/colorPrimary"
-                android:layout_below="@+id/datetimeicon"
                 android:src="@drawable/ic_ticket"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/datetime"
                 android:paddingLeft="2dp"
                 android:paddingTop="3dp"
                 android:textColor="@color/primary_text"
                 android:layout_toRightOf="@+id/numticketsicon"
                 android:textSize="12sp"
+                android:layout_alignBottom="@+id/numticketsicon"
                 android:id="@+id/numtickets"/>
+            </RelativeLayout>
 
             <!--<TextView
                 android:layout_width="wrap_content"
@@ -134,8 +167,13 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:id="@+id/status"/>
+                android:id="@+id/status"
+                android:layout_marginRight="2dp"
+                android:layout_marginBottom="2dp"
+
+                />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
