--- a/app/src/main/res/layout/profile_event.xml
+++ b/app/src/main/res/layout/profile_event.xml
@@ -10,16 +10,6 @@
     android:background="?android:attr/selectableItemBackground"
     android:id="@+id/ticket">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view3"
-        android:orientation="horizontal"
-        android:background="#95e695"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        card_view:cardElevation="5dp"
-        android:padding ="15dp">
 
         <dev.dworks.libs.astickyheader.ui.SquareImageView
             android:layout_width="65dp"
@@ -30,13 +20,14 @@
             android:layout_gravity="center_vertical"
             android:src="@drawable/ticketsbg"/>
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
             android:id="@+id/textcontainer"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="75dp"
-            android:paddingRight="10dp"
-            android:layout_gravity="center_vertical">
+            android:layout_margin="1dp"
+            android:layout_gravity="center_vertical"
+            android:foregroundGravity="center_vertical">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -47,8 +38,6 @@
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="20dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="4dp"
                 android:id="@+id/eventicon"
                 android:tint="@color/colorPrimary"
                 android:src="@drawable/ic_event"/>
@@ -56,13 +45,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="2dp"
-                android:paddingTop="4dp"
                 android:textSize="12sp"
                 android:id="@+id/eventname"
                 android:layout_toRightOf="@+id/eventicon"
                 android:layout_alignBottom="@+id/eventicon"
-
                 android:textColor="@color/primary_text"/>
             </RelativeLayout>
 
@@ -76,8 +62,6 @@
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="20dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="4dp"
                 android:id="@+id/placeicon"
                 android:tint="@color/colorPrimary"
                 android:src="@drawable/ic_place_black_24dp"/>
@@ -85,8 +69,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="2dp"
-                android:paddingTop="4dp"
                 android:textSize="12sp"
                 android:layout_toRightOf="@+id/placeicon"
                 android:textColor="@color/primary_text"
@@ -108,8 +90,7 @@
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="20dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="4dp"
+
                 android:id="@+id/datetimeicon"
                 android:tint="@color/colorPrimary"
                 android:src="@drawable/overtime"/>
@@ -117,8 +98,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="2dp"
-                android:paddingTop="3dp"
+
                 android:textSize="12sp"
                 android:layout_toRightOf="@+id/datetimeicon"
                 android:textColor="@color/primary_text"
@@ -126,8 +106,6 @@
                 android:id="@+id/eventdatetime"/>
 
             </RelativeLayout>
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
+        </LinearLayout>
 
 </LinearLayout>
