--- a/app/src/main/res/layout/attendees.xml
+++ b/app/src/main/res/layout/attendees.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal"
         android:background="#95e695"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         card_view:cardElevation="5dp"
         android:padding ="15dp">
