--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal"
         android:background="#95e695"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         card_view:cardElevation="5dp">
 
@@ -30,18 +30,20 @@
             android:layout_gravity="center_vertical"/>
 
         <RelativeLayout
-            android:orientation="vertical"
             android:id="@+id/textcontainer"
             android:layout_marginLeft="75dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:foregroundGravity="center_vertical"
+            >
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/eventlay"
-            android:gravity="center_horizontal">
+            android:gravity="center_vertical"
+            >
 
             <ImageView
                 android:layout_width="35dp"
@@ -50,6 +52,7 @@
                 android:paddingTop="4dp"
                 android:id="@+id/eventicon"
                 android:tint="@color/colorPrimary"
+                android:foregroundGravity="center_vertical"
                 android:src="@drawable/ic_event"/>
 
             <TextView
@@ -70,8 +73,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/placelay"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/eventlay">
+            android:gravity="center_vertical"
+            android:layout_below="@+id/eventlay"
+            >
 
             <ImageView
                 android:layout_width="35dp"
@@ -99,8 +103,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/datetimelay"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/placelay">
+            android:layout_below="@+id/placelay"
+            >
 
             <ImageView
                 android:layout_width="35dp"
@@ -122,34 +126,6 @@
                 android:layout_alignBottom="@+id/datetimeicon"
 
                 android:id="@+id/datetime"/>
-            </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/numlay"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/datetimelay">
-
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="20dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="4dp"
-                android:id="@+id/numticketsicon"
-                android:tint="@color/colorPrimary"
-                android:src="@drawable/ic_ticket"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="2dp"
-                android:paddingTop="3dp"
-                android:textColor="@color/primary_text"
-                android:layout_toRightOf="@+id/numticketsicon"
-                android:textSize="12sp"
-                android:layout_alignBottom="@+id/numticketsicon"
-                android:id="@+id/numtickets"/>
             </RelativeLayout>
 
             <!--<TextView
