--- a/app/src/main/res/layout/fragment_view_events.xml
+++ b/app/src/main/res/layout/fragment_view_events.xml
@@ -1,8 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.julia.wirtec_iticket.ViewTickets">
 
@@ -11,6 +10,9 @@
         android:id="@+id/events_swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+
+
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
